--- a/public/css/src/app/app_ux.css
+++ b/public/css/src/app/app_ux.css
@@ -38,7 +38,7 @@
     font-size: 16px;
     border-radius: 40px;
     padding: 0 30px;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .toast--info {
@@ -312,10 +312,10 @@
 
 }
 
-.modal.--share.--disabled button {
+.modal.--disabled button {
     color: #eee;
 }
-.modal.--share.--pending button {
+.modal.--pending button {
     color: #eee;
 }
 
