--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="fr">
-
+ 
 <head>
 
   <title>Des rencontres avant d'aller en soirée </title>
@@ -699,7 +699,7 @@
         <div class="be-create-row__subtitle">
           <h2 data-lid="be_create_subtitle_hosts"></h2>
         </div>
-        <div class="be-create-row --hosts">
+        <div class="be-create-row --hosts --unset">
           <div class="be-create__icon --round-icon"><i class="icon icon-star"></i></div>
           <div class="be-create-row__input">
             <input readonly data-lid="be_create_hosts_placeholder"/>
@@ -714,19 +714,19 @@
         <div class="be-create-row__subtitle">
           <h2 data-lid="be_create_subtitle_before"></h2>
         </div>
-        <div class="be-create-row --date">
+        <div class="be-create-row --date --unset">
           <div class="be-create__icon --round-icon"><i class="icon icon-calendar"></i></div>
           <div class="be-create-row__input">
             <input data-lid="be_create_date_placeholder" readonly/>
           </div>
         </div>
-        <div class="be-create-row --hour">
+        <div class="be-create-row --hour --unset">
           <div class="be-create__icon --round-icon"><i class="icon icon-clock"></i></div>
           <div class="be-create-row__input">
-            <input data-lid="be_create_hour_placeholder"/>
+            <input readonly data-lid="be_create_hour_placeholder"/>
           </div>
         </div>
-        <div class="be-create-row --location">
+        <div class="be-create-row --location --unset">
           <div class="be-create__icon --round-icon"><i class="icon icon-location"></i></div>
           <div class="be-create-row__input">
             <input data-lid="be_create_location_placeholder" />
