--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -745,14 +745,10 @@
       <div class="be-rows">
         <div class="be-header">
           <div class="be-dates">
-            <div class="be-dates__date" data-date=''>Lundi 25/04</div>
-            <div class="be-dates__date --active" data-date=''>Mardi 26/04</div>
-            <div class="be-dates__date" data-date=''>Mercredi 27/04</div>
+            <!-- Dynamically injected -->
           </div>
           <div class="be-dates__address">
-            <i class="icon icon-location"></i>
-            <span>A proximité du 37 rue du Four, 75006 Paris </span>
-          </div>
+            <!-- Dynamically injected -->
         </div>
         <div class="be-row">
           <div class="be-hour">20h30</div>
@@ -903,6 +899,8 @@
 
 
   <script src="//js.pusher.com/3.0/pusher.min.js"></script>
+  <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
+
 
   <script src="/dist/mee.js"></script>
 
