--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -62,6 +62,7 @@
   <link rel="stylesheet" href="/css/src/profile/profile_user.css">
   <link rel="stylesheet" href="/css/src/pictures/pictures.css">
   <link rel="stylesheet" href="/css/src/thumbnail/thumbnail.css">
+  <link rel="stylesheet" href="/css/src/rosace/rosace.css">
   <link rel="stylesheet" href="/css/src/search/search.css">
   <link rel="stylesheet" href="/css/src/search/search_filters.css">
   <link rel="stylesheet" href="/css/src/seek/seek.css">
@@ -789,74 +790,6 @@
       </div>
 
 
-
-      <div class="be-rows">
-        <div class="be-header">
-          <div class="be-dates">
-            <!-- Dynamically injected -->
-          </div>
-          <div class="be-dates__address">
-            <!-- Dynamically injected -->
-        </div>
-        <div class="be-row">
-          <div class="be-hour">20h30</div>
-          <div class="be-users">
-            <div class="be__user">
-              <img src="/img/bots/bot5f.jpg" alt="">
-              <div class="be__user-country">
-                <i class="flag-icon flag-icon-fr"></i>
-              </div>
-              <div class="be__user-gender user-gender --female"></div>
-            </div>
-            <div class="be__user">
-              <img src="/img/bots/bot3f.jpg" alt="">
-              <div class="be__user-country">
-                <i class="flag-icon flag-icon-de"></i>
-              </div>
-              <div class="be__user-gender user-gender --male"></div>
-            </div>
-          </div>
-        </div>
-        <div class="be-row">
-          <div class="be-hour">21h30</div>
-          <div class="be-users">
-            <div class="be__user">
-              <img src="/img/bots/bot17f.jpg" alt="">
-              <div class="be__user-country">
-                <i class="flag-icon flag-icon-fr"></i>
-              </div>
-              <div class="be__user-gender user-gender --female"></div>
-            </div>
-            <div class="be__user">
-              <img src="/img/bots/bot19f.jpg" alt="">
-              <div class="be__user-country">
-                <i class="flag-icon flag-icon-de"></i>
-              </div>
-              <div class="be__user-gender user-gender --female"></div>
-            </div>
-          </div>
-        </div>
-        <div class="be-row">
-          <div class="be-hour">22h30</div>
-          <div class="be-users">
-            <div class="be__user">
-              <img src="/img/bots/bot22f.jpg" alt="">
-              <div class="be__user-country">
-                <i class="flag-icon flag-icon-bz"></i>
-              </div>
-              <div class="be__user-gender user-gender --female"></div>
-            </div>
-            <div class="be__user">
-              <img src="/img/bots/bot25f.jpg" alt="">
-              <div class="be__user-country">
-                <i class="flag-icon flag-icon-de"></i>
-              </div>
-              <div class="be__user-gender user-gender --female"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
         
     </section>
      <!-- Map end -->
@@ -956,7 +889,6 @@
 
 
   <script src="//js.pusher.com/3.0/pusher.min.js"></script>
-  <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
 
 
   <!-- build:js -->
