--- a/public/css/src/app/app_ux.css
+++ b/public/css/src/app/app_ux.css
@@ -19,6 +19,9 @@
     background: #6ae74f;
 }
 
+.padded {
+    padding-top: 60px;
+}
 
 /* App toasts */
 
@@ -153,29 +156,35 @@
 
 .modal__close {
     position: absolute;
-    top: 10px;
-    right: 6px;
+    top: 12px;
+    right: 8px;
     cursor: pointer;
     color: #ccc;
-    font-size: 22px;
+    font-size: 16px;
 }
 
 .modal__close i {}
 
 .modal-footer button.--rounded {
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     border-radius: 100px;
-    color: #33AFFF;
+    color: white;
     background: white;
     border: 4px solid;
+}
+
+.modal.--share button,
+.modal.--be-create button {
+    background: #33afff;
+    border: 4px solid #33afff;
 }
 
 .modal.--logout button {
     color: #fd7124;
 }
 .modal.--logout button i {
-    font-size: 42px;;
+    font-size: 36px;
 }
 
 .modal-footer button.--squared {}
@@ -314,6 +323,8 @@
 
 .modal.--disabled button {
     color: #eee;
+    border: 4px solid;
+    background: white;
 }
 .modal.--pending button {
     color: #eee;
@@ -337,18 +348,38 @@
 .slide {
     background: rgb(255, 255, 255);
     color: #191919;
-    width: 380px;
+    width: 350px;
     display: flex;
     flex-flow: column nowrap;
     position: fixed;
     right: 0;
     top: 59px;
     z-index: 100;
-    /* border-left: 2px solid #454545; */
     height: 500px;
-    padding: 0 10px;
     box-shadow: 0 0 14px #949494;
 }
+
+.slide-overlay {
+    position: absolute;
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.74);
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    flex-flow: column;
+    display: none;
+}
+
+.slide-overlay__actions {display: flex;margin-top: auto;flex-flow: column;background: #eee;position: relative;}
+
+.slide-overlay__action {display: flex;justify-content: center;align-items: center;height: 54px;font-size: 18px;background: white;cursor: pointer;margin: 1px 0px;}
+.slide-overlay__action:hover {
+    background: #F7F7F7;
+}
+.slide-overlay__action.--back {color: #DB4760;font-weight: 700;margin-top: 8px;}
+
+.slide-overlay__action-message {display: flex;justify-content: center;color: #eee;margin-bottom: 16px;position: absolute;top: -30px;left: 50%;transform: translate(-50%,0);}
 
 .slide.--facebook {
 }
@@ -374,14 +405,10 @@
 
 .slide-body {
     min-height: 100%;
-    max-height: 300px;
-    margin: 20px 0 0px;
-    padding: 10px 16px 0;
     display: flex!important;
-    flex-flow: row wrap;
-    overflow: hidden;
     align-items: flex-start;
     outline: none;
+    position: relative;
 }
 
 .slide__loader {
@@ -401,7 +428,7 @@
 
 .slide__title h1 {}
 
-.slide__close {position: absolute;top: 20px;transform: translate(0,-50%);right: 4px;/* background: #3C7FEE; */color: #868686;/* border: 2px solid #191919; */height: 30px;width: 30px;cursor: pointer;z-index: 1;/* border-radius: 10px; */}
+.slide__close {position: absolute;top: 8px;transform: translate(0,-50%);right: 8px;/* background: #3C7FEE; */color: #868686;color: white;text-shadow: 0 0 1px #868686;height: 30px;width: 30px;cursor: pointer;font-size: 14px;z-index: 100;display: none;}
 
 .slide__close i {
     margin: auto;
@@ -444,6 +471,9 @@
 /* End slide */
 
 
+.--filterlay {
+    background: #af8276!important;
+}
 
 
 /* Bubble */
