--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -75,9 +75,9 @@
 
 .friend-modal__icon {
     position: absolute;
-    bottom: -10px;
-    right: -10px;
-    background: #ccc;
+    bottom: -8px;
+    right: -8px;
+    background: #eee;
     height: 16px;
     width: 16px;
     font-size: 10px;
@@ -106,6 +106,6 @@
 
 }
 .friend-modal.--selected .friend-modal__icon {
-    background: #1B69EC;
+    background: #33AFFF;
 }
 .friend-modal.--selected .friend-modal__name {font-weight: 800;}
