--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -4,7 +4,7 @@
 	flex-flow: row wrap;
 	justify-content: center;
 	position: relative;
-	padding-top: 200px;
+	padding-top: 140px;
 	/* transition: padding linear .6s; */
 }
 
@@ -41,7 +41,7 @@
 	top: 119px;
 }
 
-.menu-section {display: none;flex-flow: column nowrap;justify-content: flex-start;align-items: center;height: 100%;width: 80%;margin-bottom: 50px;}
+.menu-section {display: none;flex-flow: column nowrap;justify-content: flex-start;align-items: center;height: 100%;width: 80%;margin-bottom: 50px;padding-top: 80px;}
 
 .menu-item {
 	display: flex;
