--- a/public/css/src/profile/profile_user.css
+++ b/public/css/src/profile/profile_user.css
@@ -1,3 +1,9 @@
+
+.slide.--profile {
+    left: 0px;
+    width: 350px;
+}
+
 .user-profile {
     display: none;
     flex-flow: column nowrap;
@@ -13,21 +19,28 @@
     overflow: visible;
     background-color: white;
     position: relative;
-    height: 220px;
+    /* height: 220px; */
+    width: 100%;
+    padding-bottom: 100%;
 }
 
 .user-pics__img {
     opacity: 0;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    top: 0;
+    left: 0;
+    /* transform: translate(-50%,-50%); */
+    width: 100%;
+    height: 100%;
 }
 
 .user-pics__img.--active {
 }
 
-.user-pics__img img {}
+.user-pics__img img {
+    width: 100%;
+    height: 100%;
+}
 
 .user-infos {
     display: flex;
@@ -35,32 +48,46 @@
     width: 100%;
     padding: 0 24px;
     box-sizing: border-box;
-    position: relative;
+    position: absolute;
+    background: white;
+    top: 280px;
+    z-index: 2;
 }
 
 .user-infos__item {
     display: flex;
     flex-flow: row nowrap;
-    margin: 6px 0;
+    margin: 4px 0;
     font-size: 16px;
     align-items: center;
+    color: #333;
 }
 
 .user-infos__item.--name {
     position: absolute;
-    top: -26px;
+    top: -59px;
     color: white;
-    left: 50%;
-    transform: translate(-50%, 0);
-    font-size: 24px;
+    left: 20px;
+    /* transform: translate(-50%, 0); */
+    font-size: 26px;
     font-weight: 700;
+    z-index: 10;
+}
+.user-infos__item.--name.--female h2 {
+    background: rgba(213, 93, 140, 0.79);
+}
+
+.user-infos__item.--name.--male h2 {
+    background: rgba(63, 179, 198, 0.7);
 }
 
 .user-infos__item.--name h2 {
     border-radius: 100px;
-    background: rgba(27, 105, 236, 0.85);
-    padding: 8px 30px;
+    padding: 8px 26px;
     white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 128px;
+    overflow: hidden;
 }
 
 .user-infos__item.--age {
@@ -77,6 +104,10 @@
     margin-left: 20px;
     padding-bottom: 0px;
     font-size: 16px;
+    line-height: 20px;
+    max-height: 64px;
+    overflow: scroll;
+    text-overflow: ellipsis;
 }
 
 .user-infos__item label i {
@@ -88,10 +119,12 @@
 }
 
 .user-infos__icon {
-    background: #3C7FEE;
-    color: white;
-    height: 40px;
-    width: 40px;
+    background: #EAEAEA;
+    color: #454545;
+    /* border: 1px solid #3C7FEE; */
+    height: 34px;
+    width: 34px;
+    flex-shrink: 0;
 }
 
 .user-infos__icon i {
@@ -103,12 +136,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 30px 0 4px 0;
+    margin: 16px 0 4px 0;
 }
 
 .user-infos__title label {
     color: #ccc;
     margin: 0 20px;
+    font-size: 12px;
 }
 
 .user-infos__title-splitter {
@@ -121,18 +155,26 @@
 .user-actions {
     position: absolute;
     right: 0;
-    top: 50px;
+    top: -100px;
     color: #454545;
+    z-index: 10;
+    /* background: rgba(0, 0, 0, 0.14); */
+    background: linear-gradient(transparent,rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0.45));
+    width: 100%;
+    height: 100px;
+    justify-content: flex-end;
+    align-items: flex-end;
+    display: flex;
 }
 
 .user-actions > div {
     border: 1px solid;
-    height: 60px;
-    width: 60px;
-    font-size: 34px;
-    margin: 10px 0;
+    height: 46px;
+    width: 46px;
+    font-size: 28px;
+    margin: 10px 4px;
     cursor: pointer;
-    box-shadow: 0 0 1px #383838;
+    color: white;
 }
 
 .user-actions i {
@@ -144,18 +186,28 @@
 .user-actions__meepass {}
 
 .user-actions__share:hover {
-    color: #919191;
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .user-actions__meepass:hover {
-    color: #919191;
+    color: rgba(255, 255, 255, 0.7);
 }
 
-.user-pics__navigate {position: absolute;font-size: 40px;height: 30px;width: 30px;top: 50%;transform: translate(0,-50%);cursor: pointer;color: #454545;color: #3C7FEE;}
-.user-pics__navigate.--left {right: 150px;}
-.user-pics__navigate.--right {left: 124px;}
+.user-pics__navigate {position: absolute;font-size: 16px;height: 30px;width: 30px;top: 44%;transform: translate(0,-56%);cursor: pointer;color: #FFFFFF;/* color: #3C7FEE; */background: rgba(72, 72, 72, 0.33);z-index: 10;}
+.user-pics__navigate.--left {
+    left: 10px;
+}
+.user-pics__overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    opacity: .2
+}
+
+.user-pics__navigate.--right {right: 6px;}
 .user-pics__navigate i {
-   margin: auto;
 }
 .user-pics__navigate:hover {
     opacity: .5;
