--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -120,18 +120,22 @@
 .search-user__pic-overlay:hover {
 }
 
-.search-user__pic-overlay {
+.search-user__pic-overlay,
+.search-user__pic-filterlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: black;
     opacity: .0;
     transition: all ease-in-out .2s;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.search-user__pic-filterlay {
+    opacity: .2;
+    z-index: 0;
 }
 .search-user__pic-overlay i {
 
