--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -919,6 +919,7 @@
   <script src="js/src/analytics/analytics_google.js"></script>
   <script src="js/src/before/before.js"></script>
   <script src="js/src/before/before_create.js"></script>
+  <script src="js/src/before/before_request.js"></script>
   <script src="js/src/before/before_realtime.js"></script>
   <script src="js/src/chat/chat.js"></script>
   <script src="js/src/chat/chat_inview.js"></script>
@@ -964,6 +965,7 @@
   <!-- build:remove -->
   <script src="js/src/map/map_test.js"></script>
   <script src="js/src/before/before_test.js"></script>
+  <script src="js/src/login/login_test.js"></script>
   <!-- endbuild -->
 
    
