--- a/public/css/src/login/login.css
+++ b/public/css/src/login/login.css
@@ -71,8 +71,8 @@
     width: 250px;
     height: 50px;
     background: rgba(0, 0, 0, 0.32);
-    color: white;
-    font-size: 16px;
+    color: rgb(224, 224, 224);
+    font-size: 14px;
     border-radius: 8px;
 }
 
